--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<title>Сайт</title>
+<title>Go
+        Surf</title>
 <body>
 <header class="header">
     <div class="header__title">
