--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#shop">
                         <img src="images/nav-ico-4.svg" alt="">
                         <span>Shop</span>
                     </a>
@@ -838,7 +838,7 @@
         </div>
 
     </section>
-    <section class="shop">
+    <section class="shop" id="shop">
         <div class="title">
             <div>
                 <span class="wow animate__animated animate__fadeInLeft" data-wow-offset="300">Shop</span>
