--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:whgght@100;300;400;500;800&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/style.css">
 </head>
-<title>Go
-        Surf</title>
+<title>Сайт</title>
 <body>
 <header class="header">
     <div class="header__title">
@@ -112,7 +111,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#shop">
+                    <a href="#">
                         <img src="images/nav-ico-4.svg" alt="">
                         <span>Shop</span>
                     </a>
@@ -235,17 +234,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -838,7 +837,7 @@
         </div>
 
     </section>
-    <section class="shop" id="shop">
+    <section class="shop">
         <div class="title">
             <div>
                 <span class="wow animate__animated animate__fadeInLeft" data-wow-offset="300">Shop</span>
