--- a/index.html
+++ b/index.html
@@ -234,17 +234,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" class="surf-icon" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" class="surf-water" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" class="surf-wind" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
