--- a/index.html
+++ b/index.html
@@ -234,17 +234,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;"  alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -265,17 +265,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -296,17 +296,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -327,17 +327,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -358,17 +358,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -389,17 +389,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -420,17 +420,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -451,17 +451,17 @@
                     </div>
                     <div class="slider-dots__content-row">
                         <div class="slider-dots__content-item">
-                            <img src="images/surf-icon.svg" alt="">
+                            <img src="images/surf-icon.svg" class="surf-icon" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">9-13</div>
                             <div class="slider-dots__content-name">SURF(FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/water-icon.svg" alt="">
+                            <img src="images/water-icon.svg" class="surf-water" style="width: 46px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">+2.2</div>
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img src="images/wind-icon.svg" alt="">
+                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
