--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px;  alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -275,7 +275,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -306,7 +306,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -337,7 +337,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -368,7 +368,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -399,7 +399,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -430,7 +430,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
@@ -461,7 +461,7 @@
                             <div class="slider-dots__content-name">Tide (FT)</div>
                         </div>
                         <div class="slider-dots__content-item">
-                            <img class="surf-wind" style="width: 56px;height: 25px;" alt="">
+                            <img src="images/wind-icon.svg" class="surf-wind" style="width: 56px;height: 25px; alt="">
                             <div class="slider-dots__content-number">4 SE</div>
                             <div class="slider-dots__content-name">Wind (KTS)</div>
                         </div>
